manifests/deployment-3.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "victorcluster-59ca"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "victorcluster-59ca"
  template:
    metadata:
      labels:
        app: "victorcluster-59ca"
    spec:
      containers:
        - name: "victorcluster-59ca"
          image: "clustescrud.azurecr.io/victorcluster"
          ports:
          - containerPort: 80
