manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "victorcluster-8e95"
    labels:
        app: "victorcluster-8e95"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "victorcluster-8e95"
