manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "victorcluster-6a7c"
    labels:
        app: "victorcluster-6a7c"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: victorcluster17a4-victorcluster-6a7c.b957aba6b4b04d14919c.westus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "victorcluster-6a7c"
                servicePort: 80
